[package]
name = "led_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["rt", "macros", "sync", "time"] }
async-trait = "0.1.53"
env_logger = "0.9.0"
log = "0.4"
colored = "2.0.0"
